Kubernetes_01/modulo_08_projeto_final/02-database.yaml

# 3. O Cofre Virtual Trancado de Acesso (Service PABX)
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql-banco                  # O NOME DO CORE-DNS INAMOVÍVEL (O Backend usará ISSO)
  namespace: meu-primeiro-projeto
spec:
  type: ClusterIP                        # REDE CORTADA DO MUNDO EXTERNO. ISOLADA.
  selector:
    camada: database
  ports:
    - port: 3306                         # A porta padrão onde os clientes JDBC batem

---

# 4. O Sistema em si rodando (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-mysql-livraria
  namespace: meu-primeiro-projeto
spec:
  replicas: 1                            # Nunca suba 2 Replicas do MYSQL Stateless se não houver GaleraCluster config!
  selector:
    matchLabels:
      camada: database
  template:
    metadata:
      labels:
        camada: database
    spec:
      containers:
        - name: mysql-app
          image: mysql:8.0
          
          # Injeção das senhas pegando la do SECRET blindado (Nível Modulo 04)
          ports:
            - containerPort: 3306
            
          # O Plug no fundo da caixa (Nivel Modulo 05)
          volumeMounts:
            - name: storage-mysql
              mountPath: /var/lib/mysql
              
      # Amarração do Chassi ao cabo do PVC:
      volumes:
        - name: storage-mysql
          persistentVolumeClaim:
            claimName: disco-pvc-mysql-livraria
